Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@ e.g.:</p>
 
 <p><strong>overlay</strong></p>
 
-<p>*format: color code
-this option is for setting the background color of your preloader.</p>
+<p>*format: color code</p>
+
+<p><em>this option is for setting the background color of your preloader.</em></p>
 
 <p>e.g.:</p>
 
@@ -84,8 +85,9 @@ this option is for setting the background color of your preloader.</p>
 
 <p><strong>loader</strong></p>
 
-<p>*format: file path
-this option is for linking to your loader gif.</p>
+<p>*format: file path</p>
+
+<p><em>this option is for linking to your loader gif.</em></p>
 
 <p>e.g.:</p>
 
@@ -93,8 +95,9 @@ this option is for linking to your loader gif.</p>
 
 <p><strong>elements</strong></p>
 
-<p>*format: array of css selectors
-this option is for quequeing important items to finish loading before presenting our website to the user</p>
+<p>*format: array of css selectors</p>
+
+<p><em>this option is for quequeing important items to finish loading before presenting our website to the user</em></p>
 
 <p><strong><em>*Important Note:</em></strong></p>
 
